# OOP-LAB-4

./: CMakeLists.txt  README.md  main.cpp  test.txt
include/: array_template.h  figure_template.h  pentagon_template.h  point_template.h  rhombus_template.h  trapezoid_template.h
src/: array.cpp  figure.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp  point.cpp
test/: test.cpp
